--- a/hima/experiments/hmm/configs/layer/pinball.yaml
+++ b/hima/experiments/hmm/configs/layer/pinball.yaml
@@ -1,23 +1,34 @@
 cells_per_column: 10
-n_vars_per_factor: 3
-factors_per_var: 5
-enable_internal_connections: False
 
-# boosting
 external_vars_boost: 0  # set it non-zero to shift probability of choosing external var for factor
 unused_vars_boost: 0
-
-# learning
-initial_log_factor_value: 0.0
-context_lr: 0.05
-internal_lr: 0.001
-segment_activity_lr: 0.001
-var_score_lr: 0.001
 
 inverse_temp: 1.0
 
 cell_activation_threshold: 0.0001
-# max_segments_per_cell: 10
-max_segments: 5000
 developmental_period: 3000
-fraction_of_segments_to_prune: 0.3
+
+enable_internal_connections: False
+enable_context_connections: True
+
+context_factors_conf:
+  n_vars_per_factor: 3
+  max_factors_per_var: 1
+  lr: 0.05
+  segment_activity_lr: 0.001
+  var_score_lr: 0.001
+  initial_log_factor_value: 0
+  max_segments: 5000
+  fraction_of_segments_to_prune: 0.0
+  max_segments_per_cell: 255
+
+internal_factors_conf:
+  n_vars_per_factor: 3
+  max_factors_per_var: 1
+  lr: 0.001
+  segment_activity_lr: 0.001
+  var_score_lr: 0.001
+  initial_log_factor_value: 0
+  max_segments: 5000
+  fraction_of_segments_to_prune: 0.0
+  max_segments_per_cell: 255
