--- a/hima/experiments/temporal_pooling/configs/stp.yaml
+++ b/hima/experiments/temporal_pooling/configs/stp.yaml
@@ -268,6 +268,7 @@ blocks:
       adapt_to_ff_sparsity: True
       learning_rate: 0.002
       newborn_pruning_cycle: 1.0
+      boosting_k: 0.25
 
 stats_and_metrics:
   mae_normalization: no
