--- a/hima/experiments/hmm/configs/layer/pinball.yaml
+++ b/hima/experiments/hmm/configs/layer/pinball.yaml
@@ -3,33 +3,37 @@ cells_per_column: 10
 external_vars_boost: 0  # set it non-zero to shift probability of choosing external var for factor
 unused_vars_boost: 0
 
-inverse_temp_context: 0.8
-inverse_temp_internal: 0.5
+inverse_temp_context: 1.0
+inverse_temp_internal: 1.0
 
 cell_activation_threshold: 0.0001
 developmental_period: 3000
 
-enable_internal_connections: False
+enable_internal_connections: True
 enable_context_connections: True
 
 context_factors_conf:
   n_vars_per_factor: 3
   max_factors_per_var: 1
-  lr: 0.05
+  factor_lr: 0.05
+  synapse_lr: 0.005
   segment_activity_lr: 0.001
   var_score_lr: 0.001
   initial_log_factor_value: 0
+  initial_synapse_value: 1
   max_segments: 5000
   fraction_of_segments_to_prune: 0.0
   max_segments_per_cell: 255
 
 internal_factors_conf:
-  n_vars_per_factor: 3
+  n_vars_per_factor: 4
   max_factors_per_var: 1
-  lr: 0.001
+  factor_lr: 0.05
+  synapse_lr: 0.005
   segment_activity_lr: 0.001
   var_score_lr: 0.001
   initial_log_factor_value: 0
+  initial_synapse_value: 1
   max_segments: 5000
   fraction_of_segments_to_prune: 0.0
   max_segments_per_cell: 255
