--- a/hima/experiments/temporal_pooling/configs/sp_attractor.yaml
+++ b/hima/experiments/temporal_pooling/configs/sp_attractor.yaml
@@ -1,146 +1,83 @@
-log: True
-project_name: 'sp_attractor'
-run_tag: null
+_type_: stp_experiment.sp_attractor.mnist
+project: stp.sp_attractor
+log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test metrics collection
 
-n_episodes: 1001
-update_rate: 200
-max_steps: 100
+seed: 42
+iterate:
+  _base_: iterate_setups.small
 
-# testing
-attractor_steps: 20
-n_trajectories: 500
-learn_attractor_in_loop: False
-pairs_per_trajectory: 10
-# som
-som_iterations: 1000
-som_learning_rate: 0.1
-som_sigma: 1.0
-som_size: 100
+testing:
+  _base_: testing_setups.mnist
 
-encoder_conf: 'configs/sp/encoder.yaml'
-attractor_conf: 'configs/sp/attractor.yaml'
+encoder: ...
+attractor: sp.attractor
+env: envs.random_bits
 
-experiment: mnist
+testing_setups:
+  mnist:
+    attractor_steps: 20
+    n_trajectories: 500
+    learn_attractor_in_loop: False
+    pairs_per_trajectory: 10
+  rand_bits:
+    attractor_steps: 20
+    n_trajectories: 500
+    learn_attractor_in_loop: True
+    pairs_per_trajectory: 1
 
-seed: null
-
-rbits:
-  log: True
-  project_name: 'sp_attractor_rbits'
-  run_tag: null
-
-  n_episodes: 1001
-  update_rate: 200
-  max_steps: 100
-
-  # testing
-  attractor_steps: 20
-  n_trajectories: 500
-  learn_attractor_in_loop: True
-  pairs_per_trajectory: 1
-  # som
-  som_iterations: 1000
-  som_learning_rate: 0.1
-  som_sigma: 1.0
-  som_size: 100
-
-  encoder_conf: 'configs/sp/encoder.yaml'
-  attractor_conf: 'configs/sp/attractor.yaml'
-  env_conf: 'configs/rbits/default.yaml'
-
-  experiment: rbits
-
-  seed: null
-
-rbits_default:
-  sds: [ 64, 0.375 ]
-  similarity_range: [ 0, 1 ]
+envs:
+  random_bits:
+    sds: [64, 0.375]
+    similarity_range: [0, 1]
 
 sp:
-  default:
-    seed: null
-    # input
-    feedforward_sds: null
-    # начальный размер рецептивного поля (в единицах среднего размера активного входа)
-    initial_rf_to_input_ratio: 8.0
-    # конечный размер рецептивного поля (-//-)
-    max_rf_to_input_ratio: 1.5
-    # output
-    output_sds: null
-    # learning
-    min_overlap_for_activation: 3
-    learning_rate: 0.02
-    # ослабление весов здесь задается относительно learning_rate (поэтому этот параметр обычно не нужно править)
-    global_inhibition_strength: 0.2
-
-    # далее настройки новорожденной фазы:
-    # частота прунинга (в единицах размера всего выхода SP)
-    newborn_pruning_cycle: 2.0
-    # сколько прунингов делается перед взрослением
-    newborn_pruning_stages: 10
-    # нужно ли вести статистику активного размера входа (ставь True, если вход имеет непостоянный сильно варьирующийся размер или неизвестен — это важно, тк у нас размеры рецептивных полей завязаны на значение активного размера входа)
-    adapt_to_ff_sparsity: False
-    # 0 -> бустинг выключен, если больше -> включен. Работает только в новорожденной фазе
-    boosting_k: 0.5
-
   encoder:
-    seed: ???
+    _base_: $_base.spatial_pooler.default
     # input
-    feedforward_sds: ???
-    # начальный размер рецептивного поля (в единицах среднего размера активного входа)
     initial_rf_to_input_ratio: 8.0
-    # конечный размер рецептивного поля (-//-)
     max_rf_to_input_ratio: 1.5
-    # это максимальный конечный размер рецептивного поля, он дополняет max_rf_to_input_ratio, тк этот уже в абсолютных величинах sparsity.
-    # В итоге берется минимум из этих двух параметров.
-    max_rf_sparsity: 0.1
     # output
-    output_sds: [ 1000, 0.02 ]
+    output_sds: [1000, 24]
     # learning
-    min_overlap_for_activation: 3
     learning_rate: 0.02
-    # ослабление весов здесь задается относительно learning_rate (поэтому этот параметр обычно не нужно править)
     global_inhibition_strength: 0.2
-
-    # далее настройки новорожденной фазы:
-    # частота прунинга (в единицах размера всего выхода SP)
     newborn_pruning_cycle: 2.0
-    # Этот аналогичен newborn_pruning_cycle, только определяет частоту операции prune-grow, которая на самом деле просто полное пересэмплирование рецептивного поля нейронов с очень низкой частотой активации. (тоже в единицах размера всего выхода SP)
     prune_grow_cycle: 10.0
-    # сколько прунингов делается перед взрослением
     newborn_pruning_stages: 10
-    # нужно ли вести статистику активного размера входа (ставь True, если вход имеет непостоянный сильно варьирующийся размер или неизвестен — это важно, тк у нас размеры рецептивных полей завязаны на значение активного размера входа)
     adapt_to_ff_sparsity: True
-    # 0 -> бустинг выключен, если больше -> включен. Работает только в новорожденной фазе
     boosting_k: 0.5
 
   attractor:
-    seed: null
+    _base_: $_base.spatial_pooler.default
     # input
-    feedforward_sds: null
-    # начальный размер рецептивного поля (в единицах среднего размера активного входа)
     initial_rf_to_input_ratio: 8.0
-    # конечный размер рецептивного поля (-//-)
     max_rf_to_input_ratio: 1.5
-    # это максимальный конечный размер рецептивного поля, он дополняет max_rf_to_input_ratio, тк этот уже в абсолютных величинах sparsity.
-    # В итоге берется минимум из этих двух параметров.
-    max_rf_sparsity: 0.1
     # output
-    output_sds: [ 1000, 0.02 ]
+    output_sds: [1000, 24]
     # learning
-    min_overlap_for_activation: 3
     learning_rate: 0.02
-    # ослабление весов здесь задается относительно learning_rate (поэтому этот параметр обычно не нужно править)
     global_inhibition_strength: 0.2
-
-    # далее настройки новорожденной фазы:
-    # частота прунинга (в единицах размера всего выхода SP)
     newborn_pruning_cycle: 2.0
-    # Этот аналогичен newborn_pruning_cycle, только определяет частоту операции prune-grow, которая на самом деле просто полное пересэмплирование рецептивного поля нейронов с очень низкой частотой активации. (тоже в единицах размера всего выхода SP)
-    prune_grow_cycle: 10.0
-    # сколько прунингов делается перед взрослением
     newborn_pruning_stages: 10
-    # нужно ли вести статистику активного размера входа (ставь True, если вход имеет непостоянный сильно варьирующийся размер или неизвестен — это важно, тк у нас размеры рецептивных полей завязаны на значение активного размера входа)
-    adapt_to_ff_sparsity: False
-    # 0 -> бустинг выключен, если больше -> включен. Работает только в новорожденной фазе
+    prune_grow_cycle: 100.0
     boosting_k: 0.5
+
+iterate_setups:
+  full:
+    n_episodes: 1000
+    max_steps: 100
+    log_schedule: 200
+  small:
+    n_episodes: 10
+    max_steps: 100
+    log_schedule: 200
+
+so_map:
+  iterations: 1000
+  learning_rate: 0.1
+  sigma: 1.0
+  size: 100
+
+wandb_init:
+  _base_: $_base.wandb_init
+
