--- a/hima/experiments/hmm/sweeps/bica/chmm_mpg.yaml
+++ b/hima/experiments/hmm/sweeps/bica/chmm_mpg.yaml
@@ -1,6 +1,6 @@
 project: ijcai_mpg
 entity: hauska
-program: runners/hmm_runner.py
+program: runners/chmm_runner.py
 method: grid
 metric:
   name: main_metrics/total_surprise
@@ -18,5 +18,5 @@ command:
   - ${env}
   - python
   - ${program}
-  - configs/runner/hmm/mpg_single.yaml
+  - configs/runner/chmm/mpg_single.yaml
   - ${args}
