--- a/hima/experiments/hmm/sweeps/bica/chmm_pinball.yaml
+++ b/hima/experiments/hmm/sweeps/bica/chmm_pinball.yaml
@@ -1,13 +1,13 @@
 project: ijcai_pinball2
 entity: hauska
-program: runners/hmm_runner.py
+program: runners/chmm_runner.py
 method: grid
 metric:
   name: main_metrics/total_surprise
   goal: minimize
 parameters:
   run.run_tag:
-    values: ['basic_hmm']
+    values: ['hmm']
   run.seed:
     values: [43228, 78273, 83207]
   hmm.cells_per_column:
@@ -18,5 +18,5 @@ command:
   - ${env}
   - python
   - ${program}
-  - configs/runner/hmm/pinball.yaml
+  - configs/runner/chmm/pinball.yaml
   - ${args}
