--- a/hima/experiments/hmm/sweeps/chmm_mc.yaml
+++ b/hima/experiments/hmm/sweeps/chmm_mc.yaml
@@ -1,6 +1,6 @@
 project: chmm_hp_search
 entity: hauska
-program: hmm_runner.py
+program: chmm_runner.py
 method: grid
 metric:
   name: main_metrics/total_surprise
