--- a/hima/experiments/hmm/configs/runner/chmm/pinball.yaml
+++ b/hima/experiments/hmm/configs/runner/chmm/pinball.yaml
@@ -1,21 +1,21 @@
 log: True
 save_model: False
 project_name: 'ijcai_test'
-run_tag: hmm
+run_tag: chmm
 
 n_episodes: 201
 update_rate: 10
 max_steps: 15
 log_gif_fps: 5
 prediction_steps: 5
-actions: [[ 3.14, 5 ], [0, 5], [-1.57, 2], [1.57, 2]]
-positions: [[0, -9], [0, 0], [-3, -5.3], [3, -5.3]]
-#actions: [[ 3.14, 5 ], [0, 3]]
-#positions: [[0, -9], [0, 0]]
+#actions: [[ 3.14, 5 ], [0, 5], [-1.57, 2], [1.57, 2]]
+#positions: [[0, -9], [0, 0], [-3, -5.3], [3, -5.3]]
+actions: [[ 3.14, 5 ], [0, 3]]
+positions: [[0, -9], [0, 0]]
 
 experiment: pinball
 sp_conf: 'configs/sp/hmm.yaml'
-hmm_conf: 'configs/hmm/hmm_bw.yaml'
+hmm_conf: 'configs/chmm/hmm_bw.yaml'
 env_conf: 'configs/pinball/default.yaml'
 setup: 'fork'
 
