sr animalai: update configs

--- a/hima/experiments/successor_representations/configs/runner/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/runner/animalai.yaml
@@ -1,11 +1,11 @@
-log: False
+log: True
 save_model: False
 project_name: 'sr_test'
 run_tag: null
 
 n_episodes: 501
-update_rate: 50
-max_steps: 15
+update_rate: 10
+max_steps: 10
 log_gif_fps: 5
 
 env_conf: 'configs/animalai/default.yaml'
@@ -13,6 +13,6 @@ agent_conf: 'configs/agent/default.yaml'
 layer_conf: 'configs/layer/animalai.yaml'
 encoder_conf: 'configs/encoder/sp_ensemble.yaml'
 
-setup: 'basic/1g.yml'
+setup: 'competition/01-01-01.yaml'
 
 seed: null
