--- a/hima/experiments/temporal_pooling/configs/sp_encoder.yaml
+++ b/hima/experiments/temporal_pooling/configs/sp_encoder.yaml
@@ -1,5 +1,5 @@
 _type_: stp_experiment.sp_encoder
-project: stp.sp_encoder
+project: stp.sp_encoder_mnist
 log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test metrics collection
 
 seed: 42
