--- a/hima/experiments/hmm/configs/runner/encoder/pinball.yaml
+++ b/hima/experiments/hmm/configs/runner/encoder/pinball.yaml
@@ -19,10 +19,12 @@ internal_dependence_1step: False
 #action_observable: True
 
 # input_layer | sp_ensemble | new_sp_ensemble | one_sp | null
-encoder: new_sp_ensemble
+encoder: new_sp_grouped
+# naive | learned
+decoder: naive
 
 experiment: pinball
-sp_conf: 'configs/sp/stp_sp_ensemble.yaml'
+sp_conf: 'configs/sp/stp_sp_grouped.yaml'
 hmm_conf: 'configs/layer/pinball.yaml'
 env_conf: 'configs/pinball/default.yaml'
 setup: 'fork_skewed'
