--- a/hima/experiments/hmm/configs/sp/stp_sp_grouped.yaml
+++ b/hima/experiments/hmm/configs/sp/stp_sp_grouped.yaml
@@ -1,16 +1,16 @@
-n_sp: 5
 # input
-initial_rf_to_input_ratio: 8.0
+initial_rf_to_input_ratio: 10.0
+#max_rf_to_input_ratio: 0.3
 max_rf_to_input_ratio: 1.5
-max_rf_sparsity: 0.1
+max_rf_sparsity: 0.6
 # output
-output_sds: [[12, 12], 1]
+output_sds: [[60, 12], 5]
 # learning
-min_overlap_for_activation: 3
+min_overlap_for_activation: 1
 learning_rate: 0.02
 newborn_pruning_cycle: 2.0
 newborn_pruning_stages: 10
 newborn_pruning_mode: powerlaw
 prune_grow_cycle: 100.0
 adapt_to_ff_sparsity: True
-boosting_k: 0.5
+boosting_k: 1.0
