--- a/hima/experiments/temporal_pooling/configs/sp_encoder_pinball.yaml
+++ b/hima/experiments/temporal_pooling/configs/sp_encoder_pinball.yaml
@@ -24,33 +24,30 @@ envs:
 sp:
   encoder:
     _base_: _common_base
-    max_rf_to_input_ratio: 0.3
-    output_sds: [1000, 10]
 
   grouped:
     _type_: sp.grouped
     _base_: _common_base
-    max_rf_to_input_ratio: 0.3
-    output_sds: [1000, 10]
 
   ensemble:
     _type_: sp.ensemble
     _base_: _common_base
-    n_sp: 10
-    max_rf_to_input_ratio: 0.3
-    output_sds: [100, 1]
 
   _common_base:
     _base_: $_base.spatial_pooler.default
     # input
-    initial_rf_to_input_ratio: 10.0
-    max_rf_sparsity: 0.6
+    initial_max_rf_sparsity: 0.6
+    initial_rf_to_input_ratio: 8.0
+    max_rf_to_input_ratio: 2.0
+    max_rf_sparsity: 0.4
+    # output
+    output_sds: [500, 5]
     # learning
     learning_rate: 0.02
-    newborn_pruning_cycle: 2.0
-    newborn_pruning_stages: 10
+    newborn_pruning_cycle: 3.0
+    newborn_pruning_stages: 20
     newborn_pruning_mode: powerlaw
-    prune_grow_cycle: 100.0
+    prune_grow_cycle: 200.0
     adapt_to_ff_sparsity: True
     boosting_k: 1.0
 
