--- a/hima/experiments/hmm/configs/sp/stp_sp_grouped.yaml
+++ b/hima/experiments/hmm/configs/sp/stp_sp_grouped.yaml
@@ -1,12 +1,13 @@
 # input
-initial_max_rf_sparsity: 0.4
-initial_rf_to_input_ratio: 8.0
-max_rf_to_input_ratio: 0.4
-max_rf_sparsity: 0.4
+initial_max_rf_sparsity: 0.6
+target_max_rf_sparsity: 0.1
+initial_rf_to_input_ratio: 10.0
+target_rf_to_input_ratio: 0.4
 # output
-output_sds: [[50, 10], 5]
+output_sds: [[60, 12], 5]
+#output_sds: [[50, 10], 5]
 # learning
-learning_rate: 0.02
+learning_rate: 0.002
 cross_group_inhibition_scale: 0.01
 newborn_pruning_cycle: 3.0
 newborn_pruning_stages: 20
