--- a/hima/experiments/successor_representations/configs/runner/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/runner/animalai.yaml
@@ -5,7 +5,8 @@ run_tag: null
 
 n_episodes: 501
 update_rate: 10
-max_steps: 10
+max_steps: 50
+reset_context_period: 10
 log_gif_fps: 5
 
 env_conf: 'configs/animalai/default.yaml'
